--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,6 +2,8 @@
     --ratio: calc(1920 / 100); /*нужно для расчёта резиновой вёрстки*/
     --size-24-24-12: 24px;
     --size-24-16-10: clamp(16px, calc(24vw / var(--ratio)), 24px);
+    --size-24-20-12: clamp(20px, calc(24vw / var(--ratio)), 24px);
+    --size-16-12-8: clamp(12px, calc(16vw / var(--ratio)), 16px);
 
     --color-white-100: rgba(255, 252, 242, 1);
     --color-white-80: rgba(255, 252, 242, 0.8);
@@ -23,6 +25,11 @@
 
     /*для отступов*/
     --pm-40-40-24: 40px;
+    --pm-40-24-16: clamp(24px, calc(40vw / var(--ratio)), 40px);
+    --pm-40-16-8: clamp(16px, calc(40vw / var(--ratio)), 40px);
+    --pm-16-8-4: clamp(8px, calc(16vw / var(--ratio)), 16px);
+
+    --pm-10-5-2: 10px;
 }
 
 @media screen and (max-width: 834px) {
@@ -30,6 +37,8 @@
         --ratio: calc(834 / 100);
         --size-24-24-12: clamp(12px, calc(24vw / var(--ratio)), 24px);
         --size-24-16-10: clamp(10px, calc(16vw / var(--ratio)), 16px);
+        --size-24-20-12: clamp(12px, calc(20vw / var(--ratio)), 20px);
+        --size-16-12-8: clamp(8px, calc(12vw / var(--ratio)), 12px);
 
         /*для кнопок*/
         --size-24-16-12: clamp(12px, calc(16vw / var(--ratio)), 16px);
@@ -38,6 +47,11 @@
 
         /*для отступов*/
         --pm-40-40-24: clamp(24px, calc(40vw / var(--ratio)), 40px);
+        --pm-40-24-16: clamp(16px, calc(24vw / var(--ratio)), 24px);
+        --pm-40-16-8: clamp(8px, calc(16vw / var(--ratio)), 16px);
+        --pm-16-8-4: clamp(4px, calc(8vw / var(--ratio)), 8px);
+
+        --pm-10-5-2: 5px;
     }
 }
 @media screen and (max-width: 450px) {
@@ -45,6 +59,8 @@
         --ratio: calc(450 / 100);
         --size-24-24-12: 12px;
         --size-24-16-10: 10px;
+        --size-24-20-12: 12px;
+        --size-16-12-8: 8px;
 
         /*для кнопок*/
         --size-24-16-12: 12px;
@@ -53,6 +69,11 @@
 
         /*для отступов*/
         --pm-40-40-24: 24px;
+        --pm-40-24-16: 16px;
+        --pm-40-16-8: 8px;
+        --pm-16-8-4: 4px;
+
+        --pm-10-5-2: 2px;
     }
 }
 
@@ -91,7 +112,7 @@
     }
 }
 .btn-dark {
-    background: none;
+    border: 1px solid var(--color-white-75);
     color: var(--color-white-75);
     transition: var(--transition-hover);
     &:hover {
