--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,7 @@
 :root {
     --ratio: calc(1920 / 100); /*нужно для расчёта резиновой вёрстки*/
+
+    --size-200-96-40: clamp(96px, calc(200vw / var(--ratio)), 200px);
     --size-24-24-12: 24px;
     --size-24-16-10: clamp(16px, calc(24vw / var(--ratio)), 24px);
     --size-24-20-12: clamp(20px, calc(24vw / var(--ratio)), 24px);
@@ -25,6 +27,7 @@
 
     /*для отступов*/
     --pm-40-40-24: 40px;
+    --pm-80-40-20: clamp(40px, calc(80vw / var(--ratio)), 80px);
     --pm-40-24-16: clamp(24px, calc(40vw / var(--ratio)), 40px);
     --pm-40-16-8: clamp(16px, calc(40vw / var(--ratio)), 40px);
     --pm-16-8-4: clamp(8px, calc(16vw / var(--ratio)), 16px);
@@ -35,6 +38,8 @@
 @media screen and (max-width: 834px) {
     :root {
         --ratio: calc(834 / 100);
+
+        --size-200-96-40: clamp(40px, calc(96vw / var(--ratio)), 96px);
         --size-24-24-12: clamp(12px, calc(24vw / var(--ratio)), 24px);
         --size-24-16-10: clamp(10px, calc(16vw / var(--ratio)), 16px);
         --size-24-20-12: clamp(12px, calc(20vw / var(--ratio)), 20px);
@@ -46,6 +51,7 @@
         --px-16-10-8: clamp(8px, calc(10vw / var(--ratio)), 10px);
 
         /*для отступов*/
+        --pm-80-40-20: clamp(20px, calc(40vw / var(--ratio)), 40px);
         --pm-40-40-24: clamp(24px, calc(40vw / var(--ratio)), 40px);
         --pm-40-24-16: clamp(16px, calc(24vw / var(--ratio)), 24px);
         --pm-40-16-8: clamp(8px, calc(16vw / var(--ratio)), 16px);
@@ -57,6 +63,7 @@
 @media screen and (max-width: 450px) {
     :root {
         --ratio: calc(450 / 100);
+        --size-200-96-40: 40px;
         --size-24-24-12: 12px;
         --size-24-16-10: 10px;
         --size-24-20-12: 12px;
@@ -68,6 +75,7 @@
         --px-16-10-8: 8px;
 
         /*для отступов*/
+        --pm-80-40-20: 20px;
         --pm-40-40-24: 24px;
         --pm-40-24-16: 16px;
         --pm-40-16-8: 8px;
