--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -7,7 +7,7 @@
     font-size: 100%;
     font: inherit;
     color: inherit;
-    background: inherit;
+    // background: inherit;
     line-height: 1;
     list-style: none;
     text-decoration: none;
