--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,9 +2,14 @@
     --ratio: calc(1920 / 100); /*нужно для расчёта резиновой вёрстки*/
 
     --size-200-96-40: clamp(96px, calc(200vw / var(--ratio)), 200px);
+    --size-128-64-32: clamp(64px, calc(128vw / var(--ratio)), 128px);
+    --size-32-20-12: clamp(20px, calc(32vw / var(--ratio)), 32px);
+
     --size-24-24-12: 24px;
     --size-24-16-10: clamp(16px, calc(24vw / var(--ratio)), 24px);
     --size-24-20-12: clamp(20px, calc(24vw / var(--ratio)), 24px);
+    --size-20-14-10: clamp(14px, calc(20vw / var(--ratio)), 20px);
+
     --size-16-12-8: clamp(12px, calc(16vw / var(--ratio)), 16px);
 
     --color-white-100: rgba(255, 252, 242, 1);
@@ -17,6 +22,11 @@
     --color-blue-100: rgba(0, 77, 243, 1);
     --color-yellow: rgba(255, 214, 1, 1);
     --color-black: rgba(22, 22, 22, 1);
+    --color-gradient: linear-gradient(
+        180deg,
+        rgba(0, 77, 243, 0.5) 0%,
+        rgba(0, 77, 243, 0.1) 100%
+    );
 
     --transition-hover: all 0.5s;
 
@@ -33,6 +43,9 @@
     --pm-16-8-4: clamp(8px, calc(16vw / var(--ratio)), 16px);
 
     --pm-10-5-2: 10px;
+
+    /*для блоков*/
+    --block-1600-600-294: 1600px;
 }
 
 @media screen and (max-width: 834px) {
@@ -40,9 +53,14 @@
         --ratio: calc(834 / 100);
 
         --size-200-96-40: clamp(40px, calc(96vw / var(--ratio)), 96px);
+        --size-128-64-32: clamp(32px, calc(64vw / var(--ratio)), 64px);
+        --size-32-20-12: clamp(12px, calc(20vw / var(--ratio)), 20px);
+
         --size-24-24-12: clamp(12px, calc(24vw / var(--ratio)), 24px);
         --size-24-16-10: clamp(10px, calc(16vw / var(--ratio)), 16px);
         --size-24-20-12: clamp(12px, calc(20vw / var(--ratio)), 20px);
+        --size-20-14-10: clamp(10px, calc(14vw / var(--ratio)), 14px);
+
         --size-16-12-8: clamp(8px, calc(12vw / var(--ratio)), 12px);
 
         /*для кнопок*/
@@ -58,15 +76,23 @@
         --pm-16-8-4: clamp(4px, calc(8vw / var(--ratio)), 8px);
 
         --pm-10-5-2: 5px;
+
+        /*для блоков*/
+        --block-1600-600-294: 600px;
     }
 }
 @media screen and (max-width: 450px) {
     :root {
         --ratio: calc(450 / 100);
+
         --size-200-96-40: 40px;
+        --size-128-64-32: 32px;
+        --size-32-20-12: 12px;
+
         --size-24-24-12: 12px;
         --size-24-16-10: 10px;
         --size-24-20-12: 12px;
+        --size-20-14-10: 10px;
         --size-16-12-8: 8px;
 
         /*для кнопок*/
@@ -82,6 +108,9 @@
         --pm-16-8-4: 4px;
 
         --pm-10-5-2: 2px;
+
+        /*для блоков*/
+        --block-1600-600-294: 294px;
     }
 }
 
